[package]
name = "sussy-scouter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
futures-util = "0.3.26"
lazy_static = "1.4.0"
mongodb = { version = "2.4.0", features = ["tokio-runtime", "bson-chrono-0_4"] }
poise = "0.5.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
